Config file for windows

--- a/src/.winConfig.ini
+++ b/src/.winConfig.ini
@@ -3,7 +3,7 @@ Name: Chasm
 Directory: \Users\bkingery\Desktop\Chasm
 
 [User]
-Name: "Morgan Strong"
+Name: "Brian Kingery"
 Directory: ~\Desktop\ChasmLocal
 Permissions: -1
 
