Created shotNode, updated other nodes to reflect simpler design, and included the project testing folder.

--- a/src/.config.ini
+++ b/src/.config.ini
@@ -1,10 +1,10 @@
 [Project]
 Name: Chasm
-Directory: /home/morgan/Desktop/Chasm
+Directory: /home/morgan/Documents/Development/chasm-version-system/testing/Chasm
 
 [User]
 Name: "Morgan Strong"
-Directory: ~/Desktop/ChasmLocal
+Directory: ~/Documents/Development/chasm-version-system/testing/ChasmLocal
 Permissions: -1
 
 [Misc]
