Added nodes, wrote createdOnDisk methods, & created testSuite.py
Added the following nodes:
charfxNode
compositingNode
customNode
lightingNode

Change to commandLine.py:
You can pass in the '.config.ini' file you want as cmd parameter
If none is specified then '.config.ini' is the default

TODO:
Figure out how we want to do the checkIntegrity on versionedNode
with the null symlinks

--- a/src/.config.ini
+++ b/src/.config.ini
@@ -3,7 +3,7 @@ Name: Chasm
 Directory: /home/morgan/Documents/Development/chasm-version-system/testing/Chasm
 
 [User]
-Name: "Morgan Strong"
+Name: Morgan Strong
 Directory: ~/Documents/Development/chasm-version-system/testing/ChasmLocal
 Permissions: -1
 
