REFACTORED EVERYTHING, but as of this point, new, checkout, and checkin are all working just fine.

--- a/src/.config.ini
+++ b/src/.config.ini
@@ -1,11 +1,8 @@
 [Project]
-Name: Chasm
-Directory: /home/morgan/Documents/Development/chasm-version-system/testing/Chasm
+name = Chasm
+directory = /home/morgan/Documents/dev/chasm-version-system/testing/Chasm
 
 [User]
-Name: Morgan Strong
-Directory: ~/Documents/Development/chasm-version-system/testing/ChasmLocal
-Permissions: -1
+name = Morgan Strong
+directory = /home/morgan/Documents/dev/chasm-version-system/testing/ChasmLocal
 
-[Misc]
-ProjectCommits: 0
