Implemented install maya file functionality
TODO: os.symlink() doesn't work on windows

--- a/src/.winConfig.ini
+++ b/src/.winConfig.ini
@@ -1,11 +1,8 @@
 [Project]
-Name: Chasm
-Directory: \Users\bkingery\Desktop\Chasm
+directory = \Users\bkingery\Documents\ChasmVersionSystem\chasm-version-system\testing\Chasm
+name = Chasm
 
 [User]
-Name: Brian Kingery
-Directory: ~\Desktop\ChasmLocal
-Permissions: -1
+directory = \Users\bkingery\Documents\ChasmVersionSystem\chasm-version-system\testing\ChasmLocal
+name = Brian Kingery
 
-[Misc]
-ProjectCommits: 0
